Fix alignment

--- a/style.css
+++ b/style.css
@@ -17,39 +17,33 @@ body {
     /* background-size: cover; */
 }
 
-.item {
-    flex: 1;
-}
 
-div.item {
-    width: 70%;
+.hero img {
+    width: 100%;
 }
 
 /* --------------------------- */
 
 .hero {
-    /* height: 100vh; */
+    width: 500px;
+    
     display: flex;
     align-items: center;
     justify-content: center;
     background-color: var(--color-primary); /* Change to your desired background color */
   }
-  
-  .hero-logo-container {
-    max-width: 80%;
-  }
-  
+
   .hero-logo {
     display: block;
     margin: 0 auto;
-    max-width: 100%;
+    /* max-width: 500px; */
   }
-  
+
 
 /* ------------------------------- */
 .container {
-    width: 500px;
-    max-width: 500px;
+    /* width: 500px; */
+    /* max-width: 500px; */
     margin: 1rem;
     padding: 2rem;
     box-shadow: 0 0 40px rgba(0, 0, 0, 0.2);
@@ -57,10 +51,11 @@ div.item {
     background: #fff;
 }
 
-.container,N
+.container,
 .form-input,
 .form-button {
     font: 500 1rem 'Quicksand', sans-serif;
+    background-color: var(--color-primary-dark);
 }
 
 .names {
@@ -134,7 +129,7 @@ div.item {
 }
 
 .form-input-error {
-   color: var(--color-error); 
+   color: var(--color-error);
    border-color: var(--color-error);
 }
 
@@ -162,7 +157,7 @@ div.item {
 }
 
 .form-button {
-    background: var(--color-primary-dark);
+    background: var(--color-error);
     transition: transform 0.05s;
 }
 
